<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:tag="layout/fragment_forgot_password_one_0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_register_services"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:fontFamily="@font/poppins_regular"
            android:gravity="bottom"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:text="@string/label_forgot_password_desc"
            android:textColor="@color/white"
            android:textFontWeight="400"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_mobile_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:alpha="0.5"
            android:fontFamily="@font/poppins_regular"
            android:gravity="bottom"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:text="@string/label_mobile_number"
            android:textColor="@color/white"
            android:textFontWeight="300"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_register_services" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_number"
            style="@style/CustomInputLayoutPadding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:boxStrokeErrorColor="@color/yellow"
            app:errorIconTint="@color/yellow"
            app:errorTextColor="@color/yellow"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/label_enter_mobile"
                android:inputType="number"
                android:maxLength="10"
                android:tag="binding_1"
                android:textColor="@color/white"
                android:textColorHint="@color/light_white_50"
                android:textCursorDrawable="@color/white"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintTop_toBottomOf="@+id/label_mobile_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view_mobile_number"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:alpha="0.5"
            android:background="@color/white"
            android:visibility="visible"

            app:layout_constraintTop_toBottomOf="@+id/til_number" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_send_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:padding="@dimen/_1sdp"
            android:tag="binding_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_mobile_number">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_send_otp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_button_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/label_send_otp"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="@+id/img_send_otp"
                app:layout_constraintEnd_toEndOf="@+id/img_send_otp"
                app:layout_constraintStart_toStartOf="@+id/img_send_otp"
                app:layout_constraintTop_toTopOf="@+id/img_send_otp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_send_otp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_already_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.5"
                android:fontFamily="@font/poppins_regular"
                android:gravity="end"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:text="@string/label_already_account"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="@+id/tv_login_services"
                app:layout_constraintTop_toBottomOf="@+id/view_password" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="bottom"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:padding="@dimen/_5sdp"
                android:text="@string/label_login_now"
                android:textColor="@color/yellow"
                android:textFontWeight="400"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="@+id/tv_login_services"
                app:layout_constraintTop_toBottomOf="@+id/view_password" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
