<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:tag="layout/fragment_forgot_password_two_0">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_register_services"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:fontFamily="@font/poppins_regular"
            android:gravity="bottom"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:text="@string/label_register_services"
            android:textColor="@color/white"
            android:textFontWeight="400"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="bottom"
            android:includeFontPadding="false"
            android:text="@string/label_4_digit_code"
            android:textColor="@color/yellow"
            android:textFontWeight="700"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_register_services" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_otp_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:alpha="0.5"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/label_otp_desc"
            android:textColor="@color/white"
            android:textFontWeight="400"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintTop_toBottomOf="@+id/tv_otp" />

        <LinearLayout
            android:id="@+id/ll_otp_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_otp_desc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_1"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:autofillHints="smsOTPCode"
                android:background="@drawable/bg_otp_box_selected"
                android:cursorVisible="false"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"

                android:inputType="number"
                android:maxLength="1"
                android:tag="binding_1"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/yellow"
                android:textSize="@dimen/_20ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_2"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:autofillHints="smsOTPCode"
                android:background="@drawable/bg_otp_box_unselected"
                android:cursorVisible="false"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"

                android:inputType="number"
                android:maxLength="1"
                android:tag="binding_2"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/yellow"
                android:textSize="@dimen/_20ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_3"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:autofillHints="smsOTPCode"
                android:background="@drawable/bg_otp_box_unselected"
                android:cursorVisible="false"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:tag="binding_3"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/yellow"
                android:textSize="@dimen/_20ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_4"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:autofillHints="smsOTPCode"
                android:background="@drawable/bg_otp_box_unselected"
                android:cursorVisible="false"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:tag="binding_4"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/yellow"
                android:textSize="@dimen/_20ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_otp_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ll_otp_view">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_otp_not_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/label_otp_not_received"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="@dimen/_11ssp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_otp_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:maxLines="2"
                android:tag="binding_5"
                android:text="@string/label_request_new_otp"
                android:textColor="@color/yellow"
                android:textFontWeight="700"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_validate_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:padding="@dimen/_1sdp"
            android:tag="binding_6"
            app:layout_constraintTop_toBottomOf="@+id/ll_otp_received">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_sign_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_button_bg"
                app:layout_constraintHorizontal_bias="0.333"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/label_validate_otp"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="@+id/img_sign_in"
                app:layout_constraintEnd_toEndOf="@+id/img_sign_in"
                app:layout_constraintStart_toStartOf="@+id/img_sign_in"
                app:layout_constraintTop_toTopOf="@+id/img_sign_in" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_validate_otp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_already_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.5"
                android:fontFamily="@font/poppins_regular"
                android:gravity="end"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:text="@string/label_already_account"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/tv_login_services"
                app:layout_constraintTop_toBottomOf="@+id/view_password" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="bottom"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:padding="@dimen/_5sdp"
                android:text="@string/label_login_now"
                android:textColor="@color/yellow"
                android:textFontWeight="400"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/tv_login_services"
                app:layout_constraintTop_toBottomOf="@+id/view_password" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
